Some fixes
- Ranges use div spacers between slider and input instead of margin
- Pre/Appends are restrictred to 50% width and truncated

--- a/src/components/form/form_control_layout/_form_control_layout.scss
+++ b/src/components/form/form_control_layout/_form_control_layout.scss
@@ -27,6 +27,8 @@
 
   .euiFormControlLayout__prepend,
   .euiFormControlLayout__append {
+    @include euiTextTruncate;
+    max-width: 50%;
     flex-shrink: 0;
     height: 100%;
     line-height: $euiFontSize - 1px; // The 1px less aligns the icons better
