--- a/src/components/form/range/_range_input.scss
+++ b/src/components/form/range/_range_input.scss
@@ -2,14 +2,6 @@
   width: auto;
   min-width: $euiSize * 4;
 
-  &--min {
-    margin-right: $euiSize;
-  }
-
-  &--max {
-    margin-left: $euiSize;
-  }
-
   .euiRange__popover & {
     // sass-lint:disable no-important
     margin: 0 !important;
